# fueler_API

./: .gitignore  README.md  db.sqlite3  hello.py  manage.py  pyproject.toml
data/: fuel-prices-filtered.csv
fueler/: api.py  apps.py  models.py  schemas.py  services.py
fueler/migrations/: 0001_initial.py  0002_auto_20250201_1017.py  0002_default_fuel_stops_20250201.py  0003_auto_20250201_1021.py  0003_long_lat_insert_20250201.py  0004_default_fuel_stops_20250201.py
fueler/other/: example_jsons.py  newfile.py
fueler/scripts/: dataclean.py
fueler_api/: asgi.py  settings.py  urls.py  wsgi.py
maps/: urls.py  views.py
scripts/: dataclean.py
