[project]
name = "fueler-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.6"
dependencies = [
    "django==3.2.23",
    "django-rest-framework>=0.1.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.0.1",
]
