[project]
name = "fueler-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django==3.2.23",
    "django-ninja>=1.3.0",
    "folium>=0.19.4",
    "geopy>=2.4.1",
    "openrouteservice>=2.3.3",
    "polyline>=2.0.2",
    "python-dotenv>=1.0.1",
]
